[gd_scene load_steps=11 format=2]

[ext_resource path="res://Lawforms/Voidling/assets/column_pm.tres" type="Material" id=1]
[ext_resource path="res://Lawforms/Voidling/assets/orbitor_pm.tres" type="Material" id=2]
[ext_resource path="res://Lawforms/Voidling/assets/voidling.gd" type="Script" id=3]
[ext_resource path="res://Lawforms/Voidling/assets/voidling_m.tres" type="Material" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.195422, 0.188195, 0.18814 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 0.35, 0.35, 0.35 )

[sub_resource type="SpatialMaterial" id=6]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 1, 1, 1 )

[node name="Voidling" type="KinematicBody"]
script = ExtResource( 3 )
JoypadLookSpeed = 4.0
top_speed = 5.0

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Forward" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, -1.42143 )
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="FloorRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -10, 0 )

[node name="VelocityRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -30 )

[node name="Apparition" type="Area" parent="."]
gravity_vec = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Apparition"]
shape = SubResource( 9 )

[node name="Orb" type="MeshInstance" parent="Apparition"]
mesh = SubResource( 8 )
material/0 = ExtResource( 4 )

[node name="LaserRay" type="RayCast" parent="Apparition"]
visible = false
enabled = true
cast_to = Vector3( 0, 0, -10 )

[node name="Orbitors" type="Particles" parent="Apparition"]
visible = false
amount = 20
local_coords = false
process_material = ExtResource( 2 )
draw_pass_1 = SubResource( 7 )

[node name="Column" type="Particles" parent="Apparition"]
cast_shadow = 0
amount = 20
speed_scale = 0.44
local_coords = false
process_material = ExtResource( 1 )
draw_pass_1 = SubResource( 7 )

[node name="CameraPivot" type="Spatial" parent="Apparition"]
transform = Transform( 1, 0, 0, 0, 0.860706, 0.509102, 0, -0.509102, 0.860706, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Apparition/CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 1.43051e-06, 5.36834 )
fov = 66.0
far = 500.0

[node name="CentralLight" type="OmniLight" parent="Apparition"]
light_color = Color( 0.588235, 0.960784, 0.494118, 1 )
shadow_enabled = true
omni_range = 13.4

[node name="SpotLight" type="SpotLight" parent="Apparition"]
transform = Transform( 1, 0, 0, 0, 0.598856, 0.800857, 0, -0.800857, 0.598856, -0.48994, 2.99432, 1.7181 )
spot_angle = 38.6836

[node name="DebugUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DebugUI"]
anchor_left = 0.048
anchor_top = 0.053
anchor_right = 0.048
anchor_bottom = 0.053
margin_left = 102.848
margin_top = 10.2
margin_right = 276.848
margin_bottom = 79.2
text = "Still me."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Apparition" to="." method="_on_Apparition_area_entered"]
[connection signal="area_exited" from="Apparition" to="." method="_on_Apparition_area_exited"]
